maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:8: error: identifier expected but '(' found.
def whoNeedsAMap((x,y):Tuple { // marque le monde (accessible) //
                 ^JediEscaper:52: error: ':' expected but '}' found.
}
^